<resources>
    <string name="app_name">mymediaplayer</string>
    <string name="sample_track">Sample Track</string>
    <string name="time_placeholder">0:00</string>
    <string name="skip_backward">Skip backward</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip_forward">Skip forward</string>
    <string name="mute">Mute</string>
    <string name="tap_load_audio">Tap to load audio</string>
    <string name="playback_speed">Playback speed</string>
    <string name="playback_speed_default">1.0x</string>
    <string name="library">Library</string>
    <string name="queue">Queue</string>
    <string name="playlists">Playlists</string>
    <string name="search_hint">Search by title, artist, album</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="media_library_title">Media Library</string>
    <string name="close">Close</string>
    <string name="create_playlist">Create playlist</string>
    <string name="create_playlist_name">New playlist name</string>
    <string name="create_new_playlist_option">&lt;Create new playlist&gt;</string>
    <string name="added_to">Added to %1$s</string>
    <string name="playlist_created">Playlist created</string>
    <string name="unable_to_open_picker">Unable to open picker</string>
    <string name="playing_prefix">Playing: </string>
    <string name="play_queue_title">Play Queue </string>
    <string name="long_press_remove">long-press to remove</string>

    <!-- New strings for playlist management -->
    <string name="open">Open</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_exists">A playlist with that name already exists</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="confirm_delete_playlist">Delete "%1$s"? This cannot be undone.</string>

    <!-- New strings for playing a whole playlist -->
    <string name="play_whole_playlist">Play whole playlist</string>
    <string name="playlist_empty">Playlist is empty</string>
    <string name="playing_playlist">Playing playlist: %1$s</string>

    <!-- New strings for next/previous track actions and queue dialog header labels -->
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="now_playing">Now playing</string>
    <string name="previous_item">Previous</string>
    <string name="up_next">Up next</string>
    <string name="not_playing_from_queue">Not playing from queue</string>

    <!-- New strings for authentication and account management -->
    <string name="login_title">Sign in</string>
    <string name="register_title">Create account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="no_account_register">No account? Register</string>
    <string name="have_account_login">Have an account? Sign in</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="passwords_no_match">Passwords do not match</string>
    <string name="username_taken">That username is already taken</string>
    <string name="registered_successfully">Account created. Signed in.</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="account_label">Signed in as %1$s</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>
</resources>