<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <android.widget.SearchView
        android:id="@+id/dialog_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_hint" />

    <Spinner
        android:id="@+id/dialog_sort_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <ListView
        android:id="@+id/dialog_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="end">

        <Button
            android:id="@+id/btn_show_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue" />

        <Button
            android:id="@+id/btn_manage_playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</LinearLayout>
